Bone roll calculation flips local axes at wrong rotation angle #38407

Closed
opened 2014-01-30 09:46:57 +01:00 by Gaia Clary · 15 comments
Member

System Information
windows

Blender Version
Broken: hash b'6c32930'
Worked: (optional)

Short description of error

The problem is that the axes flipping only happens when the ongoing rotation delta
passes 90 degrees, hence when you rotate 3 times by 60 degree you get
a different result compared to rotating by 180 degrees in one step.

Exact steps for others to reproduce the error

See axis_flip3.blend (changed to blend file with correct text)
Initially: Bone is set to 0.0,local Z points upwards (aligned with global Z)

  • start rotating around y (use "r" "y")
  • pass very slowly over the range around 90 degree
  • you will see the local x axis flips 3 times during the transition (i believe it should only flip once)
  • continue rotation until you are close to 180 degree

Now bone roll is ~ 0 degree, the local Z axis points upward,
the local X axis points backwards to positive Y.
Actually this result looks good to me.

  • revert the rotation using CTRL +Z
  • rotate around y by 60 degree (use "r" "y" 60)
  • rotate around y by 60 degree (use "r" "y" 60)
  • rotate around y by 60 degree (use "r" "y" 60)

Now bone roll is ~ 180 degree,
local X axis has not flipped
I believe this result is wrong!

**System Information** windows **Blender Version** Broken: hash b'6c32930' Worked: (optional) **Short description of error** The problem is that the axes flipping only happens when the ongoing **rotation delta** passes 90 degrees, hence when you rotate 3 times by 60 degree you get a different result compared to rotating by 180 degrees in one step. **Exact steps for others to reproduce the error** See [axis_flip3.blend](https://archive.blender.org/developer/F75658/axis_flip3.blend) (changed to blend file with correct text) Initially: Bone is set to 0.0,local Z points upwards (aligned with global Z) - start rotating around y (use "r" "y") - pass very slowly over the range around 90 degree - you will see **the local x axis flips 3 times during the transition** (i believe it should only flip once) - continue rotation until you are close to 180 degree Now bone roll is ~ 0 degree, the local Z axis points upward, the local X axis points backwards to positive Y. Actually this result looks good to me. - revert the rotation using CTRL +Z - rotate around y by 60 degree (use "r" "y" 60) - rotate around y by 60 degree (use "r" "y" 60) - rotate around y by 60 degree (use "r" "y" 60) Now bone roll is ~ 180 degree, local X axis has not flipped I believe this result is wrong!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary

Added subscribers: @brecht, @mont29

Added subscribers: @brecht, @mont29

@GaiaClary: Didn’t @brecht just addressed this issue in its 6c329304c1 commit?

@GaiaClary: Didn’t @brecht just addressed this issue in its 6c329304c1 commit?
Author
Member

No, i detected this after 6c329304c1 was applied. so either it is a follow up issue, or i didn't see it before. But its an issue i believe ...

No, i detected this after 6c329304c1 was applied. so either it is a follow up issue, or i didn't see it before. But its an issue i believe ...

The problem is around 90° rotations, the roll is basically undefined then and the result is influenced by float precision errors. It should handle that better than jumping around randomly.

The problem is around 90° rotations, the roll is basically undefined then and the result is influenced by float precision errors. It should handle that better than jumping around randomly.
Bastien Montagne was assigned by Sergey Sharybin 2014-02-17 09:56:14 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@mont29, you've been quite familiar with this stuff, mind looking into? :)

@mont29, you've been quite familiar with this stuff, mind looking into? :)

Gah, that can of worm again. Actually, I do mind! :P

But ok, will try to fix this stuff…

Gah, that can of worm again. Actually, I do mind! :P But ok, will try to fix this stuff…

This issue was referenced by blender/blender-addons-contrib@3fe487217d

This issue was referenced by blender/blender-addons-contrib@3fe487217db6af766ca428975a0e70c35f31fa03

This issue was referenced by 3fe487217d

This issue was referenced by 3fe487217db6af766ca428975a0e70c35f31fa03

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3fe487217d.

Closed by commit 3fe487217d.

This issue was referenced by blender/blender-addons-contrib@f23f07ced0

This issue was referenced by blender/blender-addons-contrib@f23f07ced020cc337a5fe77d02f7aaed5d584144

This issue was referenced by f23f07ced0

This issue was referenced by f23f07ced020cc337a5fe77d02f7aaed5d584144
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38407
No description provided.