Fix T38407: Bone roll calculation flips local axes at wrong rotation angle.

Basic idea is now to have the transformes bones keep "facing" the armature's Z axis, see comments in code for details.

That might not be ideal, but at least we now have humanly predictable and consistent results.